# MonStim-Analyzer

./: .editorconfig  .flake8  .gitattributes  .gitignore  Analyze_EMG.py  CHANGELOG.md  CONTRIBUTING.md  EMGAnalysis-debug.spec  EMGAnalysis.spec  EMG_Transformer.py  EMG_Utils.py  Entitlements.plist  GUI.py  MonStimAnalyzer-debug.spec  MonStimAnalyzer-v1.0.spec  MonStimAnalyzer.spec  MonStimCSV_Analyze.ipynb  Plot_EMG.py  QUICKSTART.md  README.md  RELEASE_GUIDE.md  SECURITY.md  Transform_EMG.py  __init__.py  config.yaml  config.yml  csv_to_pickle.ipynb  csv_to_pickle.py  custom_gui_elements.py  dev-requirements.txt  dialogs.py  emg_transform.py  env_updater.ps1  environment.ci.yml  environment.yml  example.py  example0.py  example1.py  example_qsettings_expansion.py  filter_test.ipynb  (+25 more)
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md  renovate.json
archived scripts/: config.json  csv_to_pickle.ipynb  example0.py  example1.py  main-old.py  single_session_analysis.py
docs/: Transform_EMG.md  architecture.adoc  command_testing_strategy.md  config-user.yaml  config-user.yml  config.yml  data_versioning.md  diagnostic_notices.md  environment.yml  latency_windows.md  latency_windows_editor.md  mmax_algorithm.md  multi_experiment_import.md  qsettings_management.md  readme.md  recording_exclusion_editor.md  testing.md  ui_scaling_guide.md  ui_scaling_implementation_summary.md
files_to_process/: readme.txt
monstim_analysis/: Analyze_EMG.py  Plot_EMG.py  Transform_EMG.py  __init__.py  version.py
monstim_converter/: __init__.py  (+1 more)
(+14557 files in other folders)
