[tool.isort]
profile = "black"
line_length = 127

[tool.black]
line-length = 127
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.0",
    "isort>=5.13.0",
]
